--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,11 @@
 CHANGELOG.txt
 =============
 
+"version": "1.3.4" - Express upgrade due to vulnerability fixes.
+    Also two more new TODO's.
+
 "version": "1.3.5" - Minor changes.
-    Hide show/hide swithc (enhacenment) for checkboxes in form facility (pointless).
+    Hide show/hide switch (enhacenment) for checkboxes in form facility (pointless).
     Two new TODO's.
 
 "version": "1.3.4" - Minor fix: Removed (forgiven) testing code in template.
